--- a/src/app/views/components/home/home.component.html
+++ b/src/app/views/components/home/home.component.html
@@ -1,7 +1,9 @@
 <mat-card class="mat-elevation-z8">
     <mat-card-header>
         <mat-card-title>OS System</mat-card-title>
-        <mat-card-subtitle>Sistema de Ordens de Serviço- Seus pedidos são uma Ordem!</mat-card-subtitle>
+        <mat-card-subtitle>Sistema de Ordens de Serviço- Este sistema foi desenvolvido utilizando a linguagem Java no Back End adotando todas as características do padrão e conceitos de Orientação a objetos. No front end foi utilizado o framework Angular com a linguagem
+            TypeScript.
+        </mat-card-subtitle>
         <img src="assets/img/work.png" alt="">
     </mat-card-header>
 
