Ajustes no Front-End

--- a/src/app/views/components/home/home.component.html
+++ b/src/app/views/components/home/home.component.html
@@ -1,11 +1,11 @@
 <mat-card class="mat-elevation-z8">
     <mat-card-header>
         <mat-card-title>OS System</mat-card-title>
-        <mat-card-subtitle>Sistema de Ordens de Serviço- Este sistema foi desenvolvido utilizando a linguagem Java no Back End adotando todas as características do padrão e conceitos de Orientação a objetos. No front end foi utilizado o framework Angular com a linguagem
-            TypeScript.
+        <mat-card-subtitle>Sistema de Ordens de Serviço, Seus pedidos são uma ordem- <br/>Este sistema foi desenvolvido utilizando a linguagem Java no <br/>Back End, adotando todas as características e conceitos de<br/> Orientação a objetos. A api vem sendo mantida na plataforma
+            do Heroku.<br/> No front end foi utilizado o framework Angular com a <br/>linguagem TypeScript e foi publicado e está sendo mantido no GitHub Pages.<br/> O Sistema de Ordens de serviço tem com objetivo atender <br/>as demandas de ordens de
+            serviço a serem executadas em uma determinada empresa,<br/> de modo que o mesmo ajude aos Técnicos e clientes a ter<br/> um controle melhor para cada ordem a ser executada.
         </mat-card-subtitle>
         <img src="assets/img/work.png" alt="">
     </mat-card-header>
-
 
 </mat-card>
